--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <P>This is my local repo</P>
-  <p>This is a new feature</p>
+  <p>This is a new feature (dropdown)</p>
 </body>
 
 </html>
